Fix markdown rendered cell alignment

--- a/src/notebook/theme.css
+++ b/src/notebook/theme.css
@@ -43,7 +43,12 @@
 
 
 .jp-MarkdownCell.jp-mod-rendered {
-  padding-left: 90px;
+  padding-left: 100px;
+}
+
+
+.jp-MarkdownCell-renderer {
+  padding-left: 4px;
 }
 
 
